<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Xia Express</string>

    <string name="Collection">Collection</string>
    <string name="ok">OK</string>
    <string name="title">Title</string>
    <string name="undo">Undo</string>
    <string name="add">Add</string>
    <string name="trash">Trash</string>
    <string name="play">Play</string>
    <string name="export">Export</string>
    <string name="edit">Edit</string>
    <string name="bkgimg">Background Image</string>
    <string name="rectangle">Rectangle</string>
    <string name="ellipse">Ellipse</string>
    <string name="polygon">Polygon</string>
    <string name="close">Close</string>
    <string name="cancel">Cancel</string>
    <string name="done">Done</string>
    <string name="enable_zoom">Enable Zoom</string>
    <string name="lock_detail">Lock detail</string>
    <string name="detail_description" tools:ignore="TypographyEllipsis">Detail description...</string>
    <string name="choose_image">Choose image</string>
    <string name="detail_title">Detail title</string>
    <string name="description">Description</string>
    <string name="language">Languages</string>
    <string name="keywords">Keywords</string>
    <string name="contributors">Contributors</string>
    <string name="relation">Relation</string>
    <string name="coverage">Coverage</string>
    <string name="license">License</string>
    <string name="creator">Creator</string>
    <string name="rights">Rights</string>
    <string name="publisher">Publisher</string>
    <string name="identifier">Identifier</string>
    <string name="source">Source</string>
    <string name="date">Date</string>
    <string name="readOnly">Read Only:</string>
    <string name="showDetails">Show Details:</string>
    <string name="metas1">Metas 1</string>
    <string name="metas2">Metas 2</string>
    <string name="metas3">Metas 3</string>
    <string name="image_infos">Image Infos</string>
    <string name="password">Password…</string>
    <string name="enter_code">Enter code</string>
    <string name="create_code">Create Code</string>
    <string name="try_again">Please, try again…</string>
    <string name="double_check">Type again please</string>
    <string name="error">Error</string>
    <string name="detail_zoom">zoom</string>
    <string name="discus">discus</string>
    <string name="button">button</string>
    <string name="xia_tablet">Xia Tablet</string>
    <string name="inkscape">Inkscape</string>
    <string name="fili">xia_fili</string>
    <string name="duplicate">Duplicate</string>
    <string name="xia">Xia</string>
    <string name="delete_file">Delete file</string>
    <string name="delete_n_files">Delete %d files</string>
    <string name="YES">Yes</string>
    <string name="NO">No</string>
    <string name="DUPLICATE_FILE">Duplicate file</string>
    <string name="select_picture">Select Picture</string>
    <string name="new_resource">New resource…</string>
    <string name="importOK">Import OK</string>
    <string name="wrongXML">Wrong XML</string>
    <string name="newPicture">New picture</string>
    <string name="importXML">Import XML</string>
    <string name="thumb">thumb</string>
    <string name="line">line</string>
    <string name="xeSettings">Xia Express Settings</string>
    <string name="version">Version</string>
    <string name="OffLine">OffLine</string>
    <string name="UseCache">Use local cache</string>
    <string name="Fun_Raiders">Fun Raiders</string>
    <string name="warning">Warning!</string>
    <string name="delete_detail">Delete detail?</string>

    <string-array name="licenses_array">
        <item>Proprietary - CC-Zero</item>
        <item>CC Attribution - CC-BY</item>
        <item>CC Attribution-ShareALike - CC-BY-SA</item>
        <item>CC Attribution-NoDerivs - CC-BY-ND</item>
        <item>CC Attribution-NonCommercial - CC-BY-NC</item>
        <item>CC Attribution-NonCommercial-ShareALike - CC-BY-NC-SA</item>
        <item>CC Attribution-NonCommercial-NoDerivs - CC-BY-NC-ND</item>
        <item>CC0 Public Domain Dedication</item>
        <item>Free Art</item>
        <item>Open Font License</item>
        <item>Other</item>
    </string-array>

</resources>
