<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="44dp"
    android:background="@color/blue"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_weight="2"
        android:gravity="start">

        <Button
            android:id="@+id/collection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/blue"
            android:text="@string/Collection"
            android:textColor="@color/white" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center">

        <TextView
            android:id="@+id/menuTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/blue"
            android:contentDescription="@string/title"
            android:text="@string/title"
            android:textColor="@color/white" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_weight="2"
        android:gravity="end">

        <ImageButton
            android:id="@+id/debug"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:background="@color/blue"
            android:contentDescription="@string/add"
            android:paddingTop="4dp"
            android:scaleType="centerInside"
            android:src="@drawable/settings" />


        <ImageButton
            android:id="@+id/addDetail"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:background="@color/blue"
            android:contentDescription="@string/add"
            android:paddingTop="4dp"
            android:scaleType="centerInside"
            android:src="@drawable/plus" />

        <ImageButton
            android:id="@+id/undo"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:background="@color/blue"
            android:contentDescription="@string/undo"
            android:paddingTop="4dp"
            android:scaleType="centerInside"
            android:src="@drawable/reply" />

        <ImageButton
            android:id="@+id/trash"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:background="@color/blue"
            android:contentDescription="@string/trash"
            android:paddingTop="4dp"
            android:scaleType="centerInside"
            android:src="@drawable/trash" />

        <ImageButton
            android:id="@+id/play"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:background="@color/blue"
            android:contentDescription="@string/play"
            android:paddingTop="4dp"
            android:scaleType="centerInside"
            android:src="@drawable/play" />

        <Button
            android:id="@+id/ok"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:background="@color/blue"
            android:text="@string/ok"
            android:textColor="@color/white" />

        <ImageButton
            android:id="@+id/export"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:background="@color/blue"
            android:contentDescription="@string/export"
            android:paddingTop="4dp"
            android:scaleType="centerInside"
            android:src="@drawable/export" />

        <ImageButton
            android:id="@+id/edit"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:background="@color/blue"
            android:contentDescription="@string/edit"
            android:paddingTop="4dp"
            android:scaleType="centerInside"
            android:src="@drawable/edit" />
    </LinearLayout>
</LinearLayout>