<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/metas1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:text="@string/title" />

        <EditText
            android:id="@+id/metasTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_weight="4"
            android:inputType="text"
            android:maxLines="1"
            android:text="" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <Switch
            android:id="@+id/readOnly"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:height="35dp"
            android:text="@string/readOnly" />

        <Switch
            android:id="@+id/showDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:height="35dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/showDetails" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:text="@string/description" />

        <EditText
            android:id="@+id/metasDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_weight="4"
            android:inputType="textMultiLine" />
    </LinearLayout>


</LinearLayout>